--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <script type="text/javascript" src="lib/lwa.js"></script>
 </body>
 </html>
